--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </a>
 
             </div>
-            <a href="Akanksha_Thalner_Trainer.pdf" class="download-btn" download>
+            <a href="AkanskhaThalner.pdf" class="download-btn" download>
                 <i class="fas fa-download"></i> Download Resume
             </a>
         </div>
