--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
             </div>
         </div>
     </footer>
-<button type="button" id="send-btn">Send Message</button>
+<!-- <button type="button" id="send-btn">Send Message</button> -->
 <div id="form-status"></div>
 
 <script>
